--- a/Dash/Dash/index.html
+++ b/Dash/Dash/index.html
@@ -27,21 +27,21 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('Genpact1.png');
+    background-image: url('Tech1.jpg');
     min-height: 100%;
 }
 
 
 /* Third image (Contact) */
 .bgimg-2 {
-    background-image: url("Genpact1.png");
+    background-image: url("Tech1.jpg");
     min-height: 400px;
 }
 
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("Genpact1.png");
+    background-image: url("Tech1.jpg");
     min-height: 400px;
 }
 
